lang.java.statics.test/tests/negative/interfaces/implementsextendsmissing.no.javtest
STATIX fail java\.interfaces\.cls-implements-sig
JAVAC  fail A is not abstract and does not override abstract method .* in I

[I]
interface I {
  public void m(A a);
  public B n(B a);
}

[A]
class A extends B implements I {
  public void m(A a) {}
}

[B]
class B {}
